--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ayguillo <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/07 09:51:31 by ayguillo          #+#    #+#              #
-#    Updated: 2019/01/21 13:29:38 by ayguillo         ###   ########.fr        #
+#    Updated: 2019/01/21 17:48:42 by ayguillo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,12 +25,14 @@ END=$'\x1b[0m
 SRCPRINTF = ft_printf/
 
 SRC = ft_atoi.c \
+	  ft_atol.c \
 	  ft_bzero.c \
 	  ft_isalnum.c \
 	  ft_isalpha.c \
 	  ft_isascii.c \
 	  ft_isdigit.c \
 	  ft_isprint.c \
+	  ft_isdigitsign.c \
 	  ft_strcat.c \
 	  ft_strcmp.c \
 	  ft_strcpy.c \
